# dataclassframe

./: .bumpversion.cfg  .gitignore  .travis.yml  Makefile  README.md  README_dev.md  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
dataclassframe/: __init__.py  dataclassframe.py  dataclassframe_.py  test_dataclassframe.py
docs/: .buildinfo  api.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  welcome.html
docs/.doctrees/: api.doctree  contributing.doctree  environment.pickle  getting_started.doctree  index.doctree  welcome.doctree
docs/_modules/: index.html  typing.html
docs/_modules/dataclassframe/: dataclassframe_.html
docs/_sources/: getting_started.md.txt
docs_source/: conf.py  index.rst
