[metadata]
name = dataclassframe
version = 0.0.0
description = A dataclass container with multi-indexing and bulk operations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Josh Levy-Kramer
url = https://github.com/joshlk/dataclassframe
download_urls = https://pypi.org/project/dataclassframe
project_urls =
	Documentation = https://joshlk.github.io/dataclassframe
	Code = https://github.com/joshlk/dataclassframe
	Issue tracker = https://github.com/joshlk/dataclassframe/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
